# Cpp_labs

task3/: CMakeLists.txt  Deque.cpp  Deque.h  main.cpp
task4/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  index.html  main.cpp  mainwindow.ui
